# watchlock

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
src/unlock_pc/: __init__.py  __main__.py  cli.py  config.py  daemon.py  scanner.py  signal_proc.py  state.py
src/unlock_pc/platform/: __init__.py  base.py  linux.py
systemd/: bluelock.service  watchlock.service
tests/: test_config.py  test_signal_proc.py  test_state.py
